// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Button should have primary style render 1`] = `
<button
  className="button primary"
/>
`;

exports[`components/Button should have secondary style render 1`] = `
<button
  className="button secondary"
/>
`;
